# SAOD_Lab7

./: CMakeLists.txt  students.txt
SAOD_Lab7/: CMakeLists.txt  main.cc
